# gnome-mplayer

./: Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  gnome-mplayer.spec  meson.build
icons/: Makefile.in
icons/16x16/: Makefile.in
icons/22x22/: Makefile.in
icons/24x24/: Makefile.in
icons/32x32/: Makefile.in
icons/48x48/: Makefile.in
icons/scalable/: Makefile.in
po/: LINGUAS  ar.gmo  bg.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  el.gmo  en_GB.gmo  es.gmo  et.gmo  eu.gmo  fi.gmo  fo.gmo  fr.gmo  fy.gmo  gl.gmo  he.gmo  hr.gmo  hu.gmo  id.gmo  it.gmo  ja.gmo  kk.gmo  ko.gmo  lt.gmo  nl.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ro.gmo  ru.gmo  si.gmo  sr.gmo  sr@latin.gmo  sv.gmo  th.gmo  tr.gmo  ug.gmo  uk.gmo  (+4 more)
src/: common.h  database.c  dbus-interface.c  dbus-interface.h  gui.c  gui.h  main.c  mntent_compat.c  mpris-interface.c  nautilus_property_page.c  nemo_property_page.c  playlist.c  playlist.h  property_page_common.c  support.c  support.h
